--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,13 @@
     "DatabaseName": "FacturaStore",
     "FacturasCollectionName": "Facturas"
   },
+  "MailSettings": {
+    "Mail": "tu correo",
+    "DisplayName": "autor",
+    "Password": "contaseña",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
